deployment/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pno-physics-bench
  name: pno-service
  namespace: production
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pno-physics-bench
  type: ClusterIP
