deployment/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rate-limit: '100'
    nginx.ingress.kubernetes.io/rate-limit-window: 1m
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  name: pno-ingress
  namespace: production
spec:
  rules:
  - host: api.pno-physics-bench.com
    http:
      paths:
      - backend:
          service:
            name: pno-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.pno-physics-bench.com
    secretName: pno-tls-cert
